--- a/templates/movie_details.html
+++ b/templates/movie_details.html
@@ -10,7 +10,8 @@
 
    <div class="row">
      <div class="col-md-8">
-       <img class="img-fluid" src="https://placehold.it/780x440" alt="">
+       <!-- <img class="img-fluid" src="https://placehold.it/780x440" alt=""> -->
+       <img class="card-img-top" src="{{ tmdb_image_url(movie.poster_path, "w780") }}">
      </div>
      <div class="col-md-4">
          <h3>{{ movie.tagline }}</h3>
@@ -27,7 +28,21 @@
    </div>
     <h3 class="my-4">Cast</h3>
    <div class="row">
-       <div class="col-md-3 col-sm-6 mb-4">
+    {% for actor in cast %}
+    <div class="col-md-3 col-sm-6 mb-4">
+        <a href="#">
+            <figure class="figure">
+                {% if actor.profile_path %}
+                    <img src="{{ tmdb_image_url(actor.profile_path, "w185") }}" class="figure-img img-fluid rounded" alt="{{ actor.name }}">
+                {% else %}
+                    <img src="https://placehold.it/185x278?text={{ actor.name }}" class="figure-img img-fluid rounded" alt="{{ actor.name }}">
+                {% endif %}
+                <figcaption class="figure-caption">{{ actor.name }} as {{ actor.character }}</figcaption>
+            </figure>
+            </a>
+    </div>
+{% endfor %}
+       <!-- <div class="col-md-3 col-sm-6 mb-4">
            <a href="#">
                <figure class="figure">
                    <img src="https://placehold.it/185x278" class="figure-img img-fluid rounded" alt="actor">
@@ -36,6 +51,6 @@
            </a>
        </div>
    </div>
- </div>
+ </div> -->
 
 {% endblock %}
