--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,6 +7,12 @@
        <h1 class="mt-5">Witaj w mojej bibliotece filmów</h1>
        <p class="lead">Znajdziesz tutaj tylko najlepsze tytuły!</p>
    </div>
+   <div class="col-lg-12 mb-4">
+    <a href="{{ url_for('homepage', list_type="now_playing") }}" class="btn btn-outline-info">W kinach</a>
+    <a href="{{ url_for('homepage', list_type="upcoming") }}" class="btn btn-outline-info">Nadchodzące</a>
+    <a href="{{ url_for('homepage', list_type="popular") }}" class="btn btn-outline-info">Popularne</a>
+    <a href="{{ url_for('homepage', list_type="top_rated") }}" class="btn btn-outline-info">Najlepiej oceniane</a>
+    </div>
    {% for movie in movies %}
    <div class="col-lg-3 col-md-6 mb-4">
        <div class="card h-100">
