--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,10 +8,15 @@
        <p class="lead">Znajdziesz tutaj tylko najlepsze tytuły!</p>
    </div>
    <div class="col-lg-12 mb-4">
-    <a href="{{ url_for('homepage', list_type="now_playing") }}" class="btn btn-outline-info">W kinach</a>
-    <a href="{{ url_for('homepage', list_type="upcoming") }}" class="btn btn-outline-info">Nadchodzące</a>
-    <a href="{{ url_for('homepage', list_type="popular") }}" class="btn btn-outline-info">Popularne</a>
-    <a href="{{ url_for('homepage', list_type="top_rated") }}" class="btn btn-outline-info">Najlepiej oceniane</a>
+
+    {% for option in options %}
+
+    <a href="{{ url_for('homepage', list_type=option) }}" 
+    class="btn btn-outline-dark {% if option==current_list %}btn-primary{% endif %}">{{ option }}
+
+    </a>
+
+  {% endfor %}  
     </div>
    {% for movie in movies %}
    <div class="col-lg-3 col-md-6 mb-4">
